# aoa-sdk

./: .gitignore  AGENTS.md  CHANGELOG.md  DESIGN.AGENTS.md  DESIGN.md  QUESTBOOK.md  README.md  ROADMAP.md  pyproject.toml
.aoa/: AGENTS.md  workspace.toml
.github/: CODEOWNERS
config/: agon_ccs_sdk_helper_candidates.seed.json  agon_duel_kernel_sdk_bindings.seed.json  agon_epistemic_sdk_helpers.seed.json  agon_kag_sdk_helpers.seed.json  agon_mechanical_trial_sdk_helpers.seed.json  agon_recurrence_adapter.seed.json  agon_retention_rank_sdk_helpers.seed.json  agon_sdk_state_packet_bindings.seed.json  agon_slc_sdk_helpers.seed.json  agon_sophian_sdk_helpers.seed.json  agon_vds_sdk_helper_candidates.seed.json  agon_wave7_recurrence_lanes.seed.json
docs/: A2A_WAVE5_CODEX_RETURN_CHECKPOINT.md  ADOPTION_DASHBOARD_API.md  ADOPTION_ROLLBACK_API.md  ADOPTION_SHADOW_RUN_API.md  AGENTS.md  AGENTS_ROOT_REFERENCE.md  AGON_CCS_SDK_HELPER_CANDIDATES.md  AGON_DUEL_KERNEL_HELPER_CANDIDATES.md  AGON_DUEL_KERNEL_SDK_BRIDGE.md  AGON_DUEL_KERNEL_SDK_STOP_LINES.md  AGON_EPISTEMIC_SDK_HELPERS.md  AGON_KAG_SDK_BOUNDARY.md  AGON_MECHANICAL_TRIAL_SDK_HELPERS.md  AGON_RECURRENCE_ADAPTER.md  AGON_RECURRENCE_ADAPTER_LANDING.md  AGON_RECURRENCE_REVIEW_LANES.md  AGON_RETENTION_RANK_SDK_HELPERS.md  AGON_SDK_PACKET_STOP_LINES.md  AGON_SOPHIAN_SDK_HELPERS.md  AGON_STATE_PACKET_SDK_BRIDGE.md  AGON_VDS_SDK_STOP_LINES.md  AGON_WAVE10_SDK_LANDING.md  AGON_WAVE11_SDK_LANDING.md  AGON_WAVE12_SDK_LANDING.md  AGON_WAVE13_SDK_LANDING.md  AGON_WAVE13_SDK_STOP_LINES.md  AGON_WAVE14_SDK_LANDING.md  AGON_WAVE15_SDK_LANDING.md  AGON_WAVE16_SDK_LANDING.md  AGON_WAVE17_SDK_LANDING.md  AGON_WAVE18_SDK_LANDING.md  AGON_WAVE1_EXPERIENCE_CAPTURE_PIPELINE.md  AGON_WAVE7_RECURRENCE_LANES.md  AGON_WAVE9_SDK_LANDING.md  APPEAL_API.md  CANDIDATE_LINEAGE_CARRY.md  (+64 more)
evals/: AGENTS.md  (+2 more)
(+2131 files in other folders)
