[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "aoa-sdk"
version = "0.2.1"
description = "Typed Python SDK for the AoA federation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "8Dionysus"}]
dependencies = [
  "pydantic>=2.8",
  "typing-extensions>=4.12",
  "orjson>=3.10",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "jsonschema>=4.23",
]
mcp = [
  "mcp[cli]>=1.2,<2",
]

[project.scripts]
aoa = "aoa_sdk.cli.main:app"

[tool.hatch.build]
exclude = [
  "/.agents",
  "/.aoa",
]
