[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "aoa-sdk"
version = "0.6.0"
description = "Typed Python SDK for the AoA federation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "8Dionysus"}]
dependencies = [
  "pydantic>=2.8",
  "typing-extensions>=4.12",
  "orjson>=3.10",
  "typer>=0.12",
  "rich>=13.7",
  "PyYAML>=6.0",
  "jsonschema>=4.23",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "jsonschema>=4.23",
  "types-PyYAML>=6.0.12",
  "types-jsonschema>=4.23",
]
mcp = [
  "mcp[cli]>=1.2,<2",
]

[project.scripts]
aoa = "aoa_sdk.cli.main:app"

[tool.hatch.build]
exclude = [
  "/.agents",
  "/.aoa",
]

# Ruff 0.16 expanded its implicit defaults; keep the repository's established
# lint policy explicit so dependency upgrades cannot silently widen CI scope.
[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.pytest.ini_options]
pythonpath = ["src"]
